# lmaobench

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: fs.cpp  signal.cpp  syscall.cpp
src/: main.cpp
src/benchmarks/: disk.cpp  syscall.cpp
